<resources>
    <string name="app_name">MVP Lab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_title_default">id labore ex et quam laborum</string>
    <string name="comment_text_default">laudantium enim quasi est quidem magnam voluptate ipsam eos\ntempora quo necessitatibus\ndolor quam autem quasi\nreiciendis et nam sapiente accusantium</string>
    <string name="comment_email_default">Eliseo@gardner.biz</string>
    <string name="comments_title">Comments (%1$d)</string>
    <string name="post_text_default">quia et suscipit suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam nostrum rerum est autem sunt rem eveniet architecto</string>
    <string name="by_author">by Leanne Graham</string>
    <string name="post_title_default">sunt aut facere repellat provident occaecati excepturi optio reprehenderit</string>
</resources>
