<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:text="@string/comment_title_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="14sp"
        android:id="@+id/tvCommentItemTitle"/>

    <TextView
        android:text="@string/comment_text_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:id="@+id/tvCommentItemText"/>

    <TextView
        android:text="@string/comment_email_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:id="@+id/tvCommentItemEmail"/>
</LinearLayout>