<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/post_title_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/tvPostItemTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:text="@string/post_text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/tvPostItemText"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:text="@string/by_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPostItemAuthor"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_toLeftOf="@+id/tvPostItemCommentsTitle"
                android:layout_toStartOf="@+id/tvPostItemCommentsTitle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:text="@string/comments_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:id="@+id/tvPostItemCommentsTitle"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>